# pyidec-modbus

./: .cursorrules.md  .gitignore  CLAUDE.md  README.md  SUMMARY.md  pyproject.toml
.cursor/rules/: guardrails.md
examples/: basic_read_write.py  cli_examples.md  poll.py
src/pyidec_modbus/: __init__.py  cli.py  client.py  errors.py  normalize.py  tagmap.py  types.py
src/pyidec_modbus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_dispatch.py  test_normalize.py  test_tagmap.py
tools/: generate_map_fc6a.py  parse_xlsx_strict.py  poll_test_registers.py
