[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "pyidec-modbus"
version = "0.1.0"
description = "Production-ready Python package wrapping pymodbus for IDEC FC6A operands by native tag names."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymodbus>=3.0",
]

[project.optional-dependencies]
dev = [
    "openpyxl>=3.0",
    "pytest>=7.0",
]
cli = [
    "typer>=0.9.0",
]

[project.scripts]
pyidec = "pyidec_modbus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyidec_modbus = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
